retreive single and all in template

--- a/posts/templates/posts.html
+++ b/posts/templates/posts.html
@@ -1,5 +1,6 @@
 <h1>this saror blog</h1>
 
-{% for post in saror %}
-    <h1>{{post}}- {{post.content}} </h1>
+{% for post in var %}
+    
+<h1><a href="url'single_post'post.id ">{{post}}</a></h1>
     {% endfor%}
