--- a/posts/templates/posts.html
+++ b/posts/templates/posts.html
@@ -2,5 +2,5 @@
 
 {% for post in var %}
     
-<h1><a href="url'single_post'post.id ">{{post}}</a></h1>
+<h1><a href="">{{post}}</a></h1>
     {% endfor%}
