--- a/posts/templates/single_post.html
+++ b/posts/templates/single_post.html
@@ -1,5 +1,5 @@
 
-<h1></h1><a href=""> {{var}} </a></h1>
+<h1></h1><a href="url'single_post'post.id "> {{var}} </a></h1>
 
 <p>{{var.content}} </p>
 
